--- a/css/ceeses.css
+++ b/css/ceeses.css
@@ -1,9 +1,63 @@
+* {
+  box-sizing: border-box;
+}
 body {
-  background-color: powderblue;
+  background-color: white;
+  font-family: serif;
+  width: 100%;
 }
 h1 {
-  color: blue;
+  color: black;
+  font-family: serif;
+  text-align: center;
+}
+h2{
+  color: black;
+  font-family: serif;
+  margin-bottom: 0px;
+  text-align: right;
+  
 }
 p {
-  color: red;
+  color: black;
+  clear: right;
+  margin-top: 0px;
+}
+#box{
+  background-color: darkgrey;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+}
+#title2 {
+  color: white
+}
+
+@media (min-width: 992px){
+  #container1{
+    float: left;
+    width: 33.33%;
+  }
+  #container2{
+    float: left;
+    width: 33.33%;
+  }
+@media (min-width: 768px) and (max-width: 991px){
+  div{
+    float: left;
+  }
+}
+@media (max-width: 767px){
+  #container1{
+    float: left;
+    width: 33.33%;
+    color: red;
+  }
+  section{
+    float: left;
+    width: 33.33%;
+    background-color: lightgrey;
+  }
 }
