--- a/Module 3/css/styles.css
+++ b/Module 3/css/styles.css
@@ -7,11 +7,13 @@ h1{
 li{
 	border-top: 1px solid black;
 }
+.container{
+	margin: 0;
+}
 #header-nav{
 	background-color: lightsteelblue;
 	border-radius: 0;
 	border-bottom: 1px solid black;
-
 }
 .navbar-brand{
 	font-family: sans-serif;
